@@ -1155,6 +1155,227 @@ block|}
 block|}
 return|;
 block|}
+annotation|@
+name|Override
+DECL|method|hashCode
+specifier|public
+name|int
+name|hashCode
+parameter_list|()
+block|{
+specifier|final
+name|int
+name|prime
+init|=
+literal|31
+decl_stmt|;
+name|int
+name|result
+init|=
+name|super
+operator|.
+name|hashCode
+argument_list|()
+decl_stmt|;
+name|result
+operator|=
+name|prime
+operator|*
+name|result
+operator|+
+operator|(
+operator|(
+name|childFilter
+operator|==
+literal|null
+operator|)
+condition|?
+literal|0
+else|:
+name|childFilter
+operator|.
+name|hashCode
+argument_list|()
+operator|)
+expr_stmt|;
+name|result
+operator|=
+name|prime
+operator|*
+name|result
+operator|+
+operator|(
+name|order
+condition|?
+literal|1231
+else|:
+literal|1237
+operator|)
+expr_stmt|;
+name|result
+operator|=
+name|prime
+operator|*
+name|result
+operator|+
+operator|(
+operator|(
+name|parentFilter
+operator|==
+literal|null
+operator|)
+condition|?
+literal|0
+else|:
+name|parentFilter
+operator|.
+name|hashCode
+argument_list|()
+operator|)
+expr_stmt|;
+return|return
+name|result
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|equals
+specifier|public
+name|boolean
+name|equals
+parameter_list|(
+name|Object
+name|obj
+parameter_list|)
+block|{
+if|if
+condition|(
+name|this
+operator|==
+name|obj
+condition|)
+return|return
+literal|true
+return|;
+if|if
+condition|(
+operator|!
+name|super
+operator|.
+name|equals
+argument_list|(
+name|obj
+argument_list|)
+condition|)
+return|return
+literal|false
+return|;
+if|if
+condition|(
+name|getClass
+argument_list|()
+operator|!=
+name|obj
+operator|.
+name|getClass
+argument_list|()
+condition|)
+return|return
+literal|false
+return|;
+name|ToParentBlockJoinSortField
+name|other
+init|=
+operator|(
+name|ToParentBlockJoinSortField
+operator|)
+name|obj
+decl_stmt|;
+if|if
+condition|(
+name|childFilter
+operator|==
+literal|null
+condition|)
+block|{
+if|if
+condition|(
+name|other
+operator|.
+name|childFilter
+operator|!=
+literal|null
+condition|)
+return|return
+literal|false
+return|;
+block|}
+elseif|else
+if|if
+condition|(
+operator|!
+name|childFilter
+operator|.
+name|equals
+argument_list|(
+name|other
+operator|.
+name|childFilter
+argument_list|)
+condition|)
+return|return
+literal|false
+return|;
+if|if
+condition|(
+name|order
+operator|!=
+name|other
+operator|.
+name|order
+condition|)
+return|return
+literal|false
+return|;
+if|if
+condition|(
+name|parentFilter
+operator|==
+literal|null
+condition|)
+block|{
+if|if
+condition|(
+name|other
+operator|.
+name|parentFilter
+operator|!=
+literal|null
+condition|)
+return|return
+literal|false
+return|;
+block|}
+elseif|else
+if|if
+condition|(
+operator|!
+name|parentFilter
+operator|.
+name|equals
+argument_list|(
+name|other
+operator|.
+name|parentFilter
+argument_list|)
+condition|)
+return|return
+literal|false
+return|;
+return|return
+literal|true
+return|;
+block|}
 block|}
 end_class
 
