@@ -40,6 +40,18 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|function
+operator|.
+name|Supplier
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -2629,6 +2641,12 @@ expr_stmt|;
 comment|// Sort by field ascending, order last
 name|sortField
 operator|=
+name|notEqual
+argument_list|(
+name|sortField
+argument_list|,
+parameter_list|()
+lambda|->
 operator|new
 name|ToParentBlockJoinSortField
 argument_list|(
@@ -2647,6 +2665,7 @@ argument_list|,
 name|parentFilter
 argument_list|,
 name|childFilter
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|sort
@@ -2913,6 +2932,12 @@ expr_stmt|;
 comment|// Sort by field descending, order last
 name|sortField
 operator|=
+name|notEqual
+argument_list|(
+name|sortField
+argument_list|,
+parameter_list|()
+lambda|->
 operator|new
 name|ToParentBlockJoinSortField
 argument_list|(
@@ -2929,6 +2954,7 @@ argument_list|,
 name|parentFilter
 argument_list|,
 name|childFilter
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|sort
@@ -3193,8 +3219,9 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 comment|// Sort by field descending, order last, sort filter (filter_1:T)
-name|childFilter
-operator|=
+name|BitSetProducer
+name|childFilter1T
+init|=
 operator|new
 name|QueryBitSetProducer
 argument_list|(
@@ -3212,7 +3239,7 @@ argument_list|)
 operator|)
 argument_list|)
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 name|query
 operator|=
 operator|new
@@ -3241,6 +3268,12 @@ argument_list|)
 expr_stmt|;
 name|sortField
 operator|=
+name|notEqual
+argument_list|(
+name|sortField
+argument_list|,
+parameter_list|()
+lambda|->
 operator|new
 name|ToParentBlockJoinSortField
 argument_list|(
@@ -3256,7 +3289,8 @@ literal|true
 argument_list|,
 name|parentFilter
 argument_list|,
-name|childFilter
+name|childFilter1T
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|sort
@@ -3520,6 +3554,47 @@ name|utf8ToString
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|sortField
+operator|=
+name|notEqual
+argument_list|(
+name|sortField
+argument_list|,
+parameter_list|()
+lambda|->
+operator|new
+name|ToParentBlockJoinSortField
+argument_list|(
+literal|"field2"
+argument_list|,
+name|SortField
+operator|.
+name|Type
+operator|.
+name|STRING
+argument_list|,
+literal|true
+argument_list|,
+operator|new
+name|QueryBitSetProducer
+argument_list|(
+operator|new
+name|TermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"__type"
+argument_list|,
+literal|"another"
+argument_list|)
+argument_list|)
+argument_list|)
+argument_list|,
+name|childFilter1T
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|searcher
 operator|.
 name|getIndexReader
@@ -3533,6 +3608,97 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+block|}
+DECL|method|notEqual
+specifier|private
+name|ToParentBlockJoinSortField
+name|notEqual
+parameter_list|(
+name|ToParentBlockJoinSortField
+name|old
+parameter_list|,
+name|Supplier
+argument_list|<
+name|ToParentBlockJoinSortField
+argument_list|>
+name|create
+parameter_list|)
+block|{
+specifier|final
+name|ToParentBlockJoinSortField
+name|newObj
+init|=
+name|create
+operator|.
+name|get
+argument_list|()
+decl_stmt|;
+name|assertFalse
+argument_list|(
+name|old
+operator|.
+name|equals
+argument_list|(
+name|newObj
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNotSame
+argument_list|(
+name|old
+argument_list|,
+name|newObj
+argument_list|)
+expr_stmt|;
+specifier|final
+name|ToParentBlockJoinSortField
+name|bro
+init|=
+name|create
+operator|.
+name|get
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|newObj
+argument_list|,
+name|bro
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|newObj
+operator|.
+name|hashCode
+argument_list|()
+argument_list|,
+name|bro
+operator|.
+name|hashCode
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertNotSame
+argument_list|(
+name|bro
+argument_list|,
+name|newObj
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|old
+operator|.
+name|equals
+argument_list|(
+name|bro
+argument_list|)
+argument_list|)
+expr_stmt|;
+return|return
+name|newObj
+return|;
 block|}
 block|}
 end_class
